# simsemantic

./: .gitignore  LICENSE  README.md  pyproject.toml
src/simsemantics/: __init__.py  semantic_trajectory.py  trajectory.py
tests/: test_Trajectory.py
