[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simsemantics"
version = "0.0.2"
authors = [
  { name="Michael Brian Orr", email="mike@michael-brian-orr.net" },
]
description = "Package for exploring the semantic trajectories of text streams"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/metasemi/simsemantic"
"Bug Tracker" = "https://github.com/metasemi/simsemantic/issues"
